# memory-server

./: .gitignore  DATAACCESS.md  Dockerfile  METADATAFILTERING.md  PLAN.md  README.md  RESTTIPS.md  STORAGEFACTORY.md  docker-compose.yml
app/: dev.ipynb  duckdb.db  main.py  pyproject.toml  sqlite.db
app/config/: storage.yaml
app/data/: test.db  users.db  users.duckdb
app/package/: utils.py
app/package/auth/: jwt_auth.py
app/package/data_catalogs/: local.py
app/package/data_models/: __init__.py  agent_execution.py  base.py  chat_session.py  conversation.py  episode.py  metadata.py  project.py  reference.py  source.py  task.py  user.py
app/package/repositories/: factory.py  generic_repository.py  nosql_repository.py
app/package/routers/: agent_execution.py  chat_session.py  conversation.py  dependencies.py  metadata.py  project.py  reference.py  source.py  task.py  user.py
app/package/schemas/: __init__.py
app/package/storage/: base.py  factory.py  manager.py
app/package/storage/nosql/: dynamodb.py
app/package/storage/relational/: duckdb.py  sqlite.py
app/tests/: test_all_models.py  test_dynamodb.py  test_user.py
